--- a/zy.html
+++ b/zy.html
@@ -14,5 +14,6 @@
    <li><a href="zy002.html" target="_blank">DIV标签+CSS</a></li>
    <li><a href="zy003.html" target="_blank">DIV3</a></li>
    <li><a href="zy004.html" target="_blank">DIV</a></li>
+   <li><a href="fangzhan/index.html" target="_blank">仿站</a></li>
 	</ul>
 </body>
