--- a/index.html
+++ b/index.html
@@ -2,10 +2,55 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>邱爽的仿站作业</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<h1><a href="zy.html">作业列表</a></h1>
-	</body>	
+<div class="top box">
+	<div class="logo fl"><img src="images/logo.jpg" alt=""></div>
+	<div class="search fr">
+	<input type="text">
+	<button>搜索</button>
+	<a href="">栏目名称</a></div>
+	</div>
+	<div class="navbar fl"><div class="box">	
+	<a href="">栏目名称</a>
+	<a href="">栏目名称</a>
+	<a href="">栏目名称</a>
+	<a href="">栏目名称</a>
+	<a href="">栏目名称</a>
+	<a href="">栏目名称</a>
+	<a href="">栏目名称</a>
+	<a href="">栏目名称</a>
+	<a href="">栏目名称</a>
+	<a href="">栏目名称</a>
+	<a href="">栏目名称</a></div>
+	</div>
+	<div class="focus"><img src="images/banner-1.jpg" alt=""></div>
+	<div class="nb box">
+	<h2>学院动态<span>/News</span></h2>
+	<div class="l fl"><img src="images/n1.jpg" alt="">
+	<h3><a href="">副校长李利一行调研国家网络安全基地孵化器</a></h3>
+		<p>本网讯（通讯员 彭传波 巫健）6月19日，武昌职业学院副校长李利率领学校世界技能大赛办公室主任彭传波、校产与后勤管</p></div>
+		<div class="fl newsbox">
+			<div class="new-zd">
+			<h2 class="new-zd-bt">2020年电子信息工程学院贫困认定公示名单</h2>
+				<p class="new-zd-wb">根据学校下发的《关于开展家庭经济困难学生认定工作的通知》文件精神，我院近期开展了贫困认定工作。各班级本着公开、公平、公正的原则进行了评选和推荐，现将认定名单公示如下，公示期为10月24日至29日。</p>
+			</div>
+			<div class="new-pt"><a class="item" href="#">
+				<p><i class="new-pop"></i>电信学院圆满完成“2020一带一路暨金砖国家技能发展与技术创新大赛”赛项</p>
+				<samp>2020/11/9</samp>
+				</a></div>
+		</div>
+	</div>
+	<div class="rd-news-box">
+		<div class="rd-news"><div class="xz-item-ber">
+			<div class="item active">督导简报</div>
+			<div class="item">党国建设</div>
+			<div class="item">美和易思专栏</div>
+			<div class="item">学生管理</div></div>
+	</div>
+    
+</body>
 </html>
