--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div class="top box">
+	<div class="top box">
 	<div class="logo fl"><img src="images/logo.jpg" alt=""></div>
 	<div class="search fr">
 	<input type="text">
@@ -15,17 +15,17 @@
 	<a href="">栏目名称</a></div>
 	</div>
 	<div class="navbar fl"><div class="box">	
-	<a href="">栏目名称</a>
-	<a href="">栏目名称</a>
-	<a href="">栏目名称</a>
-	<a href="">栏目名称</a>
-	<a href="">栏目名称</a>
-	<a href="">栏目名称</a>
-	<a href="">栏目名称</a>
-	<a href="">栏目名称</a>
-	<a href="">栏目名称</a>
-	<a href="">栏目名称</a>
-	<a href="">栏目名称</a></div>
+	<a href="">首页</a>
+	<a href="">学院简介</a>
+	<a href="">新闻中心</a>
+	<a href="">党团建设</a>
+	<a href="">教学科研</a>
+	<a href="">学生管理</a>
+	<a href="">专业设置</a>
+	<a href="">师资队伍</a>
+	<a href="">校企合作</a>
+	<a href="">技能竞赛</a>
+	<a href="">院长新箱</a></div>
 	</div>
 	<div class="focus"><img src="images/banner-1.jpg" alt=""></div>
 	<div class="nb box">
@@ -50,7 +50,6 @@
 			<div class="item">党国建设</div>
 			<div class="item">美和易思专栏</div>
 			<div class="item">学生管理</div></div>
-	</div>
-    
-</body>
+	        </div>
+		</body>
 </html>
