--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 	<a href="">院长新箱</a></div>
 	</div>
 	<div class="focus"><img src="images/banner-1.jpg" alt=""></div>
-	<div class="nb box">
-	<h2>学院动态<span>/News</span></h2>
-	<div class="l fl"><img src="images/n1.jpg" alt="">
+	<div class="nbbox">
+	<div><h2>学院动态<span style="font-size: 1.3rem;color: #717171;margin: 8px">/News</span></h2></div>
+	<div class="colg-lg-5 colg-md-12 m-0 p-0"><img src="images/n1.jpg" alt="">
 	<h3><a href="">副校长李利一行调研国家网络安全基地孵化器</a></h3>
 		<p>本网讯（通讯员 彭传波 巫健）6月19日，武昌职业学院副校长李利率领学校世界技能大赛办公室主任彭传波、校产与后勤管</p></div>
 		<div class="fl newsbox">
